Added comments and adapted to readme

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Simple Usecase Based on the Electricity Market Dataset\n",
+    "## A Simple Usecase Scenario ##\n",
     "\n",
-    "The following sample is based on the electricity market dataset. It illustrates how to use the method directly on the dataset. ..."
+    "The following examples are based on the electricity market, digit, and MNIST datasets. It illustrated how to use the method directly on the dataset. "
    ]
   },
   {
@@ -100,26 +100,37 @@
    },
    "outputs": [],
    "source": [
+    "## Load and Compose Dataset\n",
     "X_0, X_1 = load_mnist()\n",
     "\n",
     "X = np.vstack( (X_0,X_1) )\n",
     "y = np.array( X_0.shape[0]*[0]+X_1.shape[0]*[1] )\n",
     "\n",
+    "## Perform Drift Localization and find Characteristic Samples\n",
     "samps,y_s, p, n,_ = dcf.select_samples(X,y, select_from_samples=True)\n",
-    "    \n",
-    "model = dcf.simple_model(X,y,p, background=2.5,\n",
-    "                         model = RandomForestClassifier())\n",
-    "                         #model=KNeighborsClassifier(n_neighbors=25))\n",
+    "\n",
+    "## Train and test compressed Model for Drift Localization \n",
+    "model = dcf.simple_model(X,y,p, background=2.5, model = RandomForestClassifier())\n",
     "print( (model.predict(X_0)==1).mean(), (model.predict(X_0)==3).mean() )\n",
     "print( (model.predict(X_1)==0).mean(), (model.predict(X_1)==3).mean() )\n",
     "\n",
+    "## Compute Counterfactuals\n",
     "cfs = dcf.compute_counterfactual_explanation(samps, y_s, model, method=\"assignment\", X=X)\n",
     "print(model.predict(samps),model.predict(cfs))\n",
     "\n",
+    "## Plot Results\n",
     "umap_picture(X,p,n, model, samps,cfs)\n",
     "plt.show()\n",
     "show_images(samps,cfs, decoder=lambda x:x.reshape((28,28)))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A Usecase Scenario for Image Streams based on MNIST ##\n",
+    "The following example deals with the MNIST dataset. In the first example works directly on the dataset, the second uses a VAE and performes the analysis in the latent space."
    ]
   },
   {
@@ -165,7 +176,7 @@
     "X, _, _ = vae.encoder.predict( np.expand_dims(X, -1).astype(\"float32\") / 255 )\n",
     "\n",
     "## Localize Drift and find CS in Latent Space\n",
-    "samps,y_s, p, n,_ = dcf.select_samples(X,y, select_from_samples=True)\n",
+    "samps,y_s, p, n,_ = dcf.select_samples(X,y)\n",
     "\n",
     "## Train simplified model in Latent Space\n",
     "model = dcf.simple_model(X,y,p, background=2.5,model = RandomForestClassifier())\n",
@@ -177,6 +188,15 @@
     "## Plot Results\n",
     "show_images(samps,cfs, decoder=lambda x:vae.decoder.predict(x.reshape((1,-1))).reshape((28,28)))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Advanced Example on ImageNet dataset ##\n",
+    "\n",
+    "The following example shows how the method can be combined with advanced neural networks to apply it to more complex problems that cannot be dealt with directly. PyTorch and biggan have to be installed to run this example."
    ]
   },
   {
